--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,6 +1,6 @@
 # Makefile for SystemVerilog Testbench Lab1
 # LAB_DIR = lab5
-RTL= ../src/rtl/hec_cal.v ../src/rtl/LookupTable.v ../src/rtl/utopia1_atm_rx.v ../src/rtl/utopia1_atm_tx.v ../src/rtl/FwdLkp.v ../src/rtl/arbitor.v ../src/rtl/squat4_NNI.v
+RTL= ../src/rtl/hec_cal.v ../src/rtl/LookupTable.v ../src/rtl/utopia1_atm_rx.v ../src/rtl/utopia1_atm_tx.v ../src/rtl/FwdLkp.v ../src/rtl/arbitor.v ../src/rtl/squat4_NNI.v ../src/rtl/fifo_tx.v
 SVTB = ../src/tb/top.sv ../src/tb/cpu_ifc.sv ../src/tb/Utopia.sv
 SVCM = ../src/env/test.sv ../src/env/environment.sv ../src/env/config.sv ../src/env/generator.sv ../src/env/driver.sv ../src/env/monitor.sv ../src/env/scoreboard.sv ../src/env/coverage.sv
 # seed = 123456
